Fix datepicker showing behind buttons on page

--- a/w3css/w3.css
+++ b/w3css/w3.css
@@ -1098,7 +1098,8 @@ a {
 
 .w3-card-4,
 .w3-hover-shadow:hover {
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+    z-index: 999;
 }
 
 .w3-spin {
